<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<include layout="@layout/app_bar_layout"/>
	<include layout="@layout/kline_layout"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/btn_indicator_ma5"
			android:layout_width="0dp"
			android:layout_height="32dp"
			android:layout_weight="1"
			android:gravity="center"
			android:layout_marginStart="5dp"
			android:background="@drawable/btn_bg"
			android:text="@string/custom_indicator_ma5" />
		<TextView
			android:id="@+id/btn_indicator_ma10"
			android:layout_width="0dp"
			android:layout_height="32dp"
			android:layout_weight="1"
			android:background="@drawable/btn_bg"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:gravity="center"
			android:text="@string/custom_indicator_ma10" />
		<TextView
			android:id="@+id/btn_indicator_ma20"
			android:layout_width="0dp"
			android:layout_height="32dp"
			android:layout_weight="1"
			android:background="@drawable/btn_bg"
			android:layout_marginEnd="5dp"
			android:gravity="center"
			android:text="@string/custom_indicator_ma20" />
	</LinearLayout>

</LinearLayout>